--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "private": true,
   "devDependencies": {
+    "css-loader": "^0.10.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-webpack": "^1.0.8",
     "less": "^2.5.0",
     "less-loader": "^2.2.0",
-    "webpack": "^1.8.4"
+    "load-grunt-tasks": "^3.1.0",
+    "style-loader": "^0.10.1",
+    "webpack": "^1.8.4",
+    "webpack-dev-middleware": "^1.0.11",
+    "webpack-dev-server": "^1.8.0"
+  },
+  "dependencies": {
+    "extract-text-webpack-plugin": "^0.5.0"
   }
 }
