--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-webpack": "^1.0.8",
+    "jsx-loader": "^0.13.1",
     "less": "^2.5.0",
     "less-loader": "^2.2.0",
     "load-grunt-tasks": "^3.1.0",
+    "react": "^0.13.1",
     "style-loader": "^0.10.1",
     "webpack": "^1.8.4",
     "webpack-dev-middleware": "^1.0.11",
