--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jsx-loader": "^0.13.1",
     "less": "^2.5.0",
     "less-loader": "^2.2.0",
+    "lesshat": "tjwudi/lesshat#patch-1",
     "load-grunt-tasks": "^3.1.0",
     "react": "^0.13.1",
     "style-loader": "^0.10.1",
