--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "webpack-dev-server": "^1.8.0"
   },
   "dependencies": {
-    "extract-text-webpack-plugin": "^0.5.0"
+    "extract-text-webpack-plugin": "^0.5.0",
+    "jquery": "^2.1.3"
   }
 }
