--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "extract-text-webpack-plugin": "^0.5.0",
-    "jquery": "^2.1.3"
+    "jquery": "^2.1.3",
+    "rx": "^2.5.2"
   }
 }
