--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,10 @@ sudo: false
 
 install: travis_retry composer install --no-interaction --prefer-source
 
+before_script:
+  - mv config/database.test.php config/database.php
+  - mysql -e 'create database IF NOT EXISTS inter;'
+  - php artisan migrate
+  - php artisan db:seed
+
 script: vendor/bin/phpunit
