No interaction in script

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install: travis_retry composer install --no-interaction --prefer-source
 before_script:
   - mv config/database.test.php config/database.php
   - mysql -e 'create database IF NOT EXISTS inter;'
-  - php artisan migrate
-  - php artisan db:seed
+  - php artisan migrate --no-interaction --env=test
+  - php artisan db:seed --no-interaction --env=test
 
 script: vendor/bin/phpunit
