--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,31 @@
 language: php
-
 php:
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - hhvm
-
+- 5.4
+- 5.5
+- 5.6
+- 7.0
+- hhvm
 matrix:
-    allow_failures:
-        - php: 7.0
-
+  allow_failures:
+  - php: 7.0
 sudo: false
-
 install: travis_retry composer install --no-interaction --prefer-source
-
 before_script:
-  - mv config/database.test.php config/database.php
-  - mysql -e 'create database IF NOT EXISTS inter;'
-  - php artisan migrate --no-interaction --env=test
-  - php artisan db:seed --no-interaction --env=test
-
+- rm .env
+- mv .env.travis .env
+- mysql -e 'create database IF NOT EXISTS inter;'
+- php artisan migrate --no-interaction --env=test
+- php artisan db:seed --no-interaction --env=test
 script: vendor/bin/phpunit
+
+deploy:
+  provider: heroku
+  api_key:
+    secure: htLIWr8pUuPGIUeOGH9VLfEnGTtXsGIYFL1qQaSl2fjiWrFv7tqZWlEYpl1oHoRAc1tllP9YM/UOtqTgScV09Cn4LQ0NKsILNXueEQbaoftrxNqat1+M0LlJVGtucMCwzCtWMqeAb6hRGlGZyD4VzgMoB65xCdmsRMb17QjvX50=
+  app: inter-u
+  on:
+    branch: heroku-test
+  run:
+    - "rm .env"
+    - "mv .env.heroku .env"
+    - "composer install --no-interaction --prefer-source"
