database config reset

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-DB_MYSQL_USERNAME=homestead
-DB_MYSQL_PASSWORD=secret
+APP_ENV=local
+
+DB_HOST=localhost
+DB_NAME=inter
+DB_TYPE=mysql
+DB_USERNAME=homestead
+DB_PASSWORD=secret
