--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ install: travis_retry composer install --no-interaction --prefer-source
 before_script:
   - mv config/database.test.php config/database.php
   - mysql -e 'create database IF NOT EXISTS inter;'
-  - php artisan migrate:refresh --seed --no-interaction --env=test
+  - php artisan migrate --seed --no-interaction --env=test
 
 script: vendor/bin/phpunit
