--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ sudo: false
 install: travis_retry composer install --no-interaction --prefer-source
 before_script:
   - mv .env.travis .env
-  - mysql -e 'create database IF NOT EXISTS inter;'
+  - mysql -e 'create database IF NOT EXISTS inter;' -u root
   - php artisan migrate --no-interaction --env=testing
   - php artisan db:seed --no-interaction --env=testing
   - npm install -g webpack
