--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,12 @@
 		"post-install-cmd": [
 			"php artisan clear-compiled",
 			"php artisan optimize",
-			"php artisan vender:publish"
+			"php artisan vendor:publish"
 		],
 		"post-update-cmd": [
 			"php artisan clear-compiled",
 			"php artisan optimize",
-			"php artisan vender:publish"
+			"php artisan vendor:publish"
 		],
 		"post-create-project-cmd": [
 			"php -r \"copy('.env.example', '.env');\"",
